M-135 3) Отзывы, текст, часть ссылок и немного стилизации.

--- a/russian-language-tutor-reviews.html
+++ b/russian-language-tutor-reviews.html
@@ -152,163 +152,140 @@
 			<h2 class="main"> 
 				<span class="h21">
 					Репетитор по русскому и белорусскому языкам для школьников и абитуриентов <br>
-					Игнатьева Марина Михайловна
+					Игнатьева Марина Михайловна <br>
+                    Отзывы о репетиторе по русскому языку, Минск
 				</span>
 			</h2>
 
-			<div class="ck"> 
-					<img alt="Репетитор по русскому языку в Минске"
-						class="image1"  
-						src="images/photo/russian_language_tutor.jpg" 
-						title="Репетитор по русскому языку в Минске">
-					<img alt="Репетитор по белорусскому языку в Минске"
-						class="image" 
-						src="images/photo/belorussian_language_tutor.jpg" 
-						title="Репетитор по белорусскому языку в Минске">
-			</div>
-
-			<div id="realmain" class="zgt">
+			<div id="realmain" class="zgt" style="p {font-size:32px;}">
+                <h3>Отзыв 1</h3>
+                <h4>
+                    Александра Присяжнюк. <a target="_blank" href="https://www.instagram.com/alex.sadny/">Инстаграмм @alex.sadny</a>
+                </h4>
 				<p class="zgt">
-					Игнатьева Марина Михайловна в 1998 году закончила школу в г. Минске с золотой медалью и поступила в БГПУ им. М. Танка.
+					
 				</p>
+                <p class="zgt">
+                    <em>добавить фото</em>
+                </p>
+                <p class="zgt">
+                    Я посещала занятия по русскому языку у Марины Михайловны (жены Игоря Викторовича). 
+                    Заниматься начала в августе 23 года, в русском у меня пробелов было много, было много вопросов и непонятных мне тем. 
+                    Тем не менее благодаря профессионализму Марины Михайловны я углубила свои знания 
+                    и смогла успешно подготовиться к сдаче экзамена, в итоге 98 баллов, 
+                    поэтому также выражаю большую благодарность за столь высокий результат человека, 
+                    для которого русский язык был долгое время темным лесом.
+                </p>
+                <p class="zgt">
+                    <em>добавить сертификат</em>
+                </p>
 
+                <p class="zgt">
+                    <b>Комментарий Игнатьевой Марины Михайловны, репетитора по русскому и белорусскому языкам в Минске:</b>
+                </p>
+
+                <p class="zgt">
+                    Саша – очень хорошая ученица. 
+                    Она пришла летом, имея средний уровень знаний по русскому языку, однако, как губка, впитывала каждое слово.  
+                    Её работоспособность, целеустремленность, склонность к самостоятельной работе не могли не принести отличного результата. 
+                    Уверена, что ты правильно выбрала своё направление и будешь и дальше отлично учиться уже будучи студенткой ММФ БГУ.
+                </p>
+
+                <h3>Отзыв 2</h3>
+                <h4>
+                    Волоха Алина <a target="_blank" href="https://m.vk.com/cumvan">Профиль ВКонтакте</a>
+                </h4>
+
+
+                <p class="zgt">
+                    <em>добавить фото</em>
+                </p>
+
+                <p class="zgt">
+                    От чистого сердца говорю, что Марина Михайловна - лучший учитель русского языка, которого только можно найти!
+                </p>
+                <p class="zgt">
+                    Я пришла к ней во второй четверти 10-го класса с целью подтянуть белорусский язык, т.к. по этому предмету была худшая оценка в школе. Начинали с самой базы. После того как немного улучшили знания в белорусском, мы перешли к русскому языку, т.к. именно его я собиралась сдавать на ЦЭ. Хоть по русскому дела в школе были лучше (отметка 8), они держались лишь на удаче и некотором понимании пунктуации. С орфографией я вообще не дружила. В моей голове было лишь одно правило: ЖИ - ШИ пишется с буквой И.  И я не преувеличиваю! На тот момент я бы на ЦЭ и 40 баллов не получила. Я правила русского языка знала либо частично, либо искаженно, либо вообще никак. Постепенно мы начали всё проходить. Марина Михайловна очень спокойно и доходчиво объясняла правила и также спокойно могла их повторить по раз 20), что для меня считается одним из важнейших умений учителя. И как только подтянулся русский, за ним и белорусский язык не отставал, хоть ему уделяли намного меньше времени. Ещё очень важный аспект, что Марина Михайловна не пыталась объяснить «весь русский язык, который только существует». Мы занимались по её авторской программе, в которой было минимальное количество разного рода исключений. То есть она объясняла правила таким образом, что приходилось запоминать минимум текста, но никогда не ошибаться.
+                </p>
+
+                <p class="zgt">
+                    Также у меня были огромные проблемы с написанием сочинений, которых с 10-го класса стало в разы больше (в связи с изменениями плана школьной программы). Спасибо БОЛЬШОЕ Марине Михайловне за помощь в их корректировке! Под конец 11-го класса, по моему мнению (и не только!), я стала намного лучше писать разного рода тексты.
+                </p>
+
+                <p class="zgt">
+                    Моё первое РТ было написано на 80 баллов. На тот момент мы ещё прошли не все правила. На втором РТ я показала результат в 87 баллов. На нем мне не хватило внимательности и четкого плана использования правил по русскому языку. Но уже на РТ 3 – 98 баллов, а на ЦЭ – 96! Счастью не было предела. С самого НУЛЯ до 96 БАЛЛОВ…
+                </p>
+
+                <p class="zgt">
+                    Нельзя не отметить помещение, в котором мы занимались. Оно очень удобное и современное.
+                </p>
+
+                <p class="zgt">
+                    Мне безумно понравилось заниматься у Марины Михайловны. Спасибо ей большое за терпение, доброту и знания!
+                </p>
+
+                <p class="zgt">
+                    <em>добавить сертификат</em>
+                </p>
+
+                <p class="zgt">
+                    <b>Комментарий репетитора по русскому языку в Минске:</b>
+                </p>
+
+                <p class="zgt">
+                    Алина, мне было очень приятно с тобой работать! Несмотря на то, что ты пришла ко мне со слабой базой знаний по языкам, нам удалось сделать многое. Твоё трудолюбие, ответственность и целеустремлённость принесли отличный результат: ЦЭ было выполнено с единственной ошибкой из-за невнимательности! Умница!!! Желаю тебе отличной учебы в БГУ))
+                </p>
+
+                <h3>Отзыв 3</h3>
 				<p class="zgt">
-					В 2003 году окончила Белорусский государственный педагогический университет им. М. Танка с красным дипломом. 
-					Ей была присвоена квалификация “преподаватель русского языка и литературы, преподаватель белорусского языка и литературы”.
+					<b>Даник Никита, ГУО «Лицей №1 г, Минска» inst: @nikitadanilka tg: @DamathNik</b>
 				</p>
+                <p class="zgt">
+                    <em>добавить фото</em>
+                </p>
 
+                <p class="zgt">
+                    Также хочу отметить, что в то же время, наряду с математикой, я занимался русским языком у Марины Михайловны — жены Игоря Викторовича. Такой подход помог мне максимально эффективно изучать как математику, так и русский язык. На экзамене по русскому языку в НИУ ВШЭ я получил 88/100 баллов.
+                </p>
+
+                <p class="zgt">
+                    <b>Комментарий репетитора по русскому языку, Минск:</b>
+                </p>
+
+                <p class="zgt">
+                    Отмечу, что Никита в первую очередь уделял внимание математике, а правила по русскому языку для него были скучны) Многих он не знал и не применял. Однако благодаря природным способностям Никита мог написать очень красивое сочинение, глубокое и интересное. На занятиях работал продуктивно, а вот домашней работе можно было уделить больше времени)
+                </p>
+
+                <p class="zgt">
+                    Учитывая выше изложенные факторы, сложность экзамена и ограничение по времени, считаю, что результат экзамена очень хороший. Я искренне рада, что ты поступил на одну из самых престижных специальностей ведущего экономического вуза РФ. Причём в Москву и на бюджет!
+                </p>
+
+                <p class="zgt">
+                    Удачи тебе в учёбе и в жизни! У тебя есть всё для того, чтобы реализовывать самые амбициозные цели!
+                </p>
+
+                <h3>Отзыв 4</h3>
 				<p class="zgt">
-					Первым местом работы стала ГУО "Средняя школа № 73 г. Минска имени М. Ф. Шмырева", в которой Игнатьева М.М. работала с 2003 по 2007 гг.
+					<b>Павлов Илья, 12 гимназия tg: @ilya2005pan4 gmail-iliapavlov05@gmail.com</b>
 				</p>
+                <p class="zgt">
+                    <em>добавить фото</em>
+                </p>
+
+                <p class="zgt">
+                    Также я стал посещать занятия по русскому у Марины Михайловны (жена Игоря Викторовича) с 07.11.2022 года. Первое РТ я написал еще в октябре и набрал 57 баллов. К Марине Михайловне я пришел с очень слабой базой знаний, каждый урок проходил продуктивно, я узнавал для себя все больше и больше и, конечно, много практиковался. В конечном итоге я 14.05.2023  написал ЦЭ по русскому языку на 80 баллов и повысил отметку в аттестате с 8 баллов до 9.
+                </p>
+
+                <p class="zgt">
+                    <b>Комментарий репетитора по русскому языку, Минск:</b>
+                </p>
+
+                <p class="zgt">
+                    У Ильи с русским языком были существенные проблемы. К занятиям и домашней работе он относился ответственно. Единственное, чего нам не хватило - времени. Полгода слишком мало, чтобы не только разобрать все темы, но и основательно закрепить их на практике. Тем более занимались мы 1 раз в неделю. Поднять за 6 месяцев балл с 58 до 80 – это достойный результат. Желаю успехов в учёбе в БГУИР!)
+                </p>
 
 
-				<p class="zgt">
-					В 2007 году Марина Михайловна ушла в декретный отпуск и, начиная с 2010 года, стала заниматься репетиторством по русскому языку. 
-					Далее набирался опыт и повышалась квалификация. 
-					Работа в школе, гимназии, а также постоянное самообразование и развитие в профессии приносили результат.
-				</p>
-
-
-				<p class="zgt">
-					На данный момент Марина Михайловна – учитель высшей категории и высокопрофессиональный репетитор по русскому языку в Минске. 
-					Ученики, занимающиеся у нее, неуклонно повышают свой уровень знаний и успеваемость. 
-					Её способные ученики, выполняющие заданный объём работы, стабильно набирают больше 90 баллов на ЦТ и ЦЭ по русскому языку. 
-					Достигались и результаты в 100 баллов.
-				</p>
-				
-				<p class="zgt">
-					За долгий период преподавания учителем создана обширная база учебных материалов по русскому языку,
-					 авторских наработок и разнообразных вариантов ЦТ и ЦЭ по русскому языку.
-				</p>				
-
-
-				<p class="zgt">
-					Методика преподавания русского языка включает себя подробный и доступный разбор по темам:
-				</p>
-
-				<ul>
-					<li>орфография</li>
-					<li>синтаксис и пунктуация</li>
-					<li>состав слова и словообразование</li>
-					<li>морфология</li>
-					<li>фонетика и графика</li>
-					<li>лексика и фразеология</li>
-					<li>текст, стилистика и культура речи</li>
-				</ul>
-
-				<p class="zgt">
-					Марина Михайловна – мать двоих дочерей. Старшая дочь (сентябрь 2023 года) учится в 11 классе ГУО "Гимназия № 61 г. Минска", 
-					имеет 10 баллов по русскому языку и стабильно идёт на золотую медаль. 
-					Младшая перешла во второй класс СШ № 204, где в первом классе выиграла конкурс “Золотое перышко”, 
-					получила медаль “Лучший чтец” и показала самую высокую скорость чтения – 101 слово в минуту).	
-				</p>
-
-				<p class="zgt">
-					Воспитание и развитие собственных детей, а также другие семейные заботы занимают немало времени, 
-					поэтому много учеников Марина Михайловна взять не может. 
-					Обычно это ученики репетитора по математике Игнатьева Игоря Викторовича, 
-					которые пользуются опцией “Репетитор по математике и репетитор по русскому языку в одной семье” 
-					и при определённых условиях имеют скидку на занятия по русскому языку. 
-					Однако периодически возникает возможность взять нескольких учеников без привязки к математике. 
-					Информацию о наличии свободных мест стоит уточнить у преподавателя.
-				</p>
-
-				<h3>Условия проведения занятий по русскому и белорусскому языкам:</h3>
-
-				<ul>
-					<li>
-						Репетитор по русскому и белорусскому языкам проводит занятия по адресу: 
-						г. Минск, проспект Дзержинского, дом 125, Московский район, микрорайон Брилевичи. 
-						Станция метро “Малиновка” располагается в 165 метрах от места проведения занятий.
-					</li>
-					<li>
-						Занятия проходят в уютном кабинете, спроектированном дизайнером специально для проведения занятий. 
-						Современная и высококачественная мебель, продуманное освещение, профессиональное оборудование и 
-						богатейший выбор учебных материалов по русскому и белорусскому языкам.
-					</li>
-					<li>
-						Занятия проходят исключительно на территории преподавателя.
-					</li>
-					<li>
-						Репетитор по русскому языку в Минске проводит занятия индивидуально и в парах.
-					</li>
-					<li>
-						Занятия в парах возможны для учеников с сопоставимыми уровнем знаний и способностями. 
-						Формат занятий определяет учитель.
-					</li>
-					<li>
-						Периодичность занятий – 1 или 2 раза в неделю.
-					</li>
-				</ul>
-
-				<h3>
-					Предоставляемые услуги и цены. Стоимость занятий по русскому и белорусскому языкам:
-				</h3>
-
-				<ol>
-					<li>Репетитор по русскому языку 3-4 класс</li>
-					<li>Репетитор по русскому языку 5-9 класс в Минске</li>
-					<li>Репетитор по русскому языку 10-11 класс, Минск</li>
-					<li>Репетитор по белорусскому языку 3-4 класс</li>
-					<li>Репетитор по белорусскому языку 5-9 класс в Минске</li>
-					<li>Репетитор по белорусскому языку 10-11 класс, Минск</li>
-						<ul>
-							<li>
-								Стоимость индивидуальных занятий - 15 долларов США по курсу продажи в коммерческих банках РБ за один академический час. 
-								Продолжительность занятия - 2 академических часа (90 минут). 
-								Стоимость занятия в этом случае составит 30 условных единиц.
-							</li>
-							<li>
-								Стоимость занятий в паре – 12,5 долларов по курсу продажи в коммерческих банках РБ за один академический час. 
-								Продолжительность - 2 академических часа (90 минут). 
-								Стоимость занятия в этом случае составит 25 условных единиц.
-							</li>
-							<li>
-								Если ученик занимается математикой у Игоря Викторовича в мини-группах 2 раза в неделю, 
-								то ему предоставляется скидка в размере 5 долларов за каждое занятие по русскому языку.
-							</li>
-						</ul>
-
-					<li>Подготовка к ЦЭ по русскому языку в Минске</li>
-					<li>Подготовка к ЦТ по русскому языку, Минск</li>
-						<ul>
-							<li>
-								Стоимость индивидуальных занятий - 15 долларов США по курсу продажи в коммерческих банках РБ за один академический час (45 минут). 
-								Продолжительность занятия - 2 астрономических часа (120 минут). 
-								Стоимость занятия в этом случае составит 40 условных единиц.
-							</li>
-							<li>
-								Стоимость занятий в паре – 13 долларов по курсу продажи в коммерческих банках РБ за один академический час (45 минут). 
-								Продолжительность - 2 астрономических часа (120 минут). 
-								Стоимость занятия в этом случае составит 35 условных единиц.
-							</li>
-							<li>
-								Если ученик занимается математикой у Игоря Викторовича в мини-группах 2 раза в неделю, 
-								то ему предоставляется скидка в размере 5 долларов за каждое занятие по русскому языку.
-							</li>
-						</ul>
-				</ol>
-			</div>
+			</div> <!-- end of <div id="realmain" class="zgt"> -->
 
 			<div class="clear"></div>
 	</div>
