--- a/russian-language-tutor-reviews.html
+++ b/russian-language-tutor-reviews.html
@@ -159,15 +159,24 @@
 
 			<div id="realmain" class="zgt" style="p {font-size:32px;}">
                 <h3>Отзыв 1</h3>
-                <h4>
-                    Александра Присяжнюк. <a target="_blank" href="https://www.instagram.com/alex.sadny/">Инстаграмм @alex.sadny</a>
+
+                <div class="ck"> 
+                    <img  style="width: 200px; height: 200px; border-radius: 50%;"
+                     src="images/photo/reviews/russian-language-tutor/Aleksandra-Prisyazhnyuk-1.jpg" alt="Отзыв о репетиторе по русскому языку"> 
+                     <img src="images/photo/reviews/russian-language-tutor/Aleksandra-Prisyazhnyuk-1-certificate.jpg" alt="Русский язык почти на 100 баллов">
+			    </div>
+
+                <p>
+                    
+                </p>
+                <h4 align="center">
+                    Александра Присяжнюк<br>
+                    <a target="_blank" href="https://www.instagram.com/alex.sadny/">Инстаграмм @alex.sadny</a>
                 </h4>
 				<p class="zgt">
 					
 				</p>
-                <p class="zgt">
-                    <em>добавить фото</em>
-                </p>
+
                 <p class="zgt">
                     Я посещала занятия по русскому языку у Марины Михайловны (жены Игоря Викторовича). 
                     Заниматься начала в августе 23 года, в русском у меня пробелов было много, было много вопросов и непонятных мне тем. 
@@ -175,9 +184,6 @@
                     и смогла успешно подготовиться к сдаче экзамена, в итоге 98 баллов, 
                     поэтому также выражаю большую благодарность за столь высокий результат человека, 
                     для которого русский язык был долгое время темным лесом.
-                </p>
-                <p class="zgt">
-                    <em>добавить сертификат</em>
                 </p>
 
                 <p class="zgt">
