--- a/russian-language-tutor-reviews.html
+++ b/russian-language-tutor-reviews.html
@@ -163,12 +163,8 @@
                 <div class="ck"> 
                     <img  style="width: 200px; height: 200px; border-radius: 50%;"
                      src="images/photo/reviews/russian-language-tutor/Aleksandra-Prisyazhnyuk-1.jpg" alt="Отзыв о репетиторе по русскому языку"> 
-                     <img src="images/photo/reviews/russian-language-tutor/Aleksandra-Prisyazhnyuk-1-certificate.jpg" alt="Русский язык почти на 100 баллов">
 			    </div>
 
-                <p>
-                    
-                </p>
                 <h4 align="center">
                     Александра Присяжнюк<br>
                     <a target="_blank" href="https://www.instagram.com/alex.sadny/">Инстаграмм @alex.sadny</a>
@@ -186,6 +182,11 @@
                     для которого русский язык был долгое время темным лесом.
                 </p>
 
+                <div class="ck"> 
+                     <img src="images/photo/reviews/russian-language-tutor/Aleksandra-Prisyazhnyuk-1-certificate.jpg" alt="Русский язык почти на 100 баллов">
+			    </div>
+
+
                 <p class="zgt">
                     <b>Комментарий Игнатьевой Марины Михайловны, репетитора по русскому и белорусскому языкам в Минске:</b>
                 </p>
@@ -198,14 +199,16 @@
                 </p>
 
                 <h3>Отзыв 2</h3>
-                <h4>
-                    Волоха Алина <a target="_blank" href="https://m.vk.com/cumvan">Профиль ВКонтакте</a>
+
+                <div class="ck"> 
+                    <img  style="width: 200px; height: 200px; border-radius: 50%;"
+                     src="images/photo/reviews/russian-language-tutor/Voloha-Alina-2.jpg" alt="Отзыв о репетиторе по русскому языку"> 
+			    </div>
+
+                <h4 align="center">
+                    Волоха Алина <br>
+                    <a target="_blank" href="https://m.vk.com/cumvan">Профиль ВКонтакте</a>
                 </h4>
-
-
-                <p class="zgt">
-                    <em>добавить фото</em>
-                </p>
 
                 <p class="zgt">
                     От чистого сердца говорю, что Марина Михайловна - лучший учитель русского языка, которого только можно найти!
@@ -230,9 +233,9 @@
                     Мне безумно понравилось заниматься у Марины Михайловны. Спасибо ей большое за терпение, доброту и знания!
                 </p>
 
-                <p class="zgt">
-                    <em>добавить сертификат</em>
-                </p>
+                <div class="ck"> 
+                     <img src="images/photo/reviews/russian-language-tutor/Voloha-Alina-2-certificate.jpg" alt="Русский язык почти на 100 баллов">
+			    </div>
 
                 <p class="zgt">
                     <b>Комментарий репетитора по русскому языку в Минске:</b>
