M-135 6) Добавлены третий и четвертый отзывы.

--- a/russian-language-tutor-reviews.html
+++ b/russian-language-tutor-reviews.html
@@ -169,9 +169,6 @@
                     Александра Присяжнюк<br>
                     <a target="_blank" href="https://www.instagram.com/alex.sadny/">Инстаграмм @alex.sadny</a>
                 </h4>
-				<p class="zgt">
-					
-				</p>
 
                 <p class="zgt">
                     Я посещала занятия по русскому языку у Марины Михайловны (жены Игоря Викторовича). 
@@ -246,12 +243,18 @@
                 </p>
 
                 <h3>Отзыв 3</h3>
-				<p class="zgt">
-					<b>Даник Никита, ГУО «Лицей №1 г, Минска» inst: @nikitadanilka tg: @DamathNik</b>
-				</p>
-                <p class="zgt">
-                    <em>добавить фото</em>
-                </p>
+
+                <div class="ck"> 
+                    <img  style="width: 200px; height: 200px; border-radius: 50%;"
+                     src="images/photo/reviews/russian-language-tutor/Danik-Nikita-3.jpg" alt="Отзыв о репетиторе по русскому языку"> 
+			    </div>
+
+                <h4 align="center">
+                    Даник Никита<br>
+                    ГУО «Лицей №1 г, Минска» <br>
+                    <a target="_blank" href="https://www.instagram.com/nikitadanilka/">Инстаграмм @nikitadanilka</a> <br>
+                    <a target="_blank" href="tg://resolve?domain=DamathNik">Telegram @DamathNik</a>
+                </h4>
 
                 <p class="zgt">
                     Также хочу отметить, что в то же время, наряду с математикой, я занимался русским языком у Марины Михайловны — жены Игоря Викторовича. Такой подход помог мне максимально эффективно изучать как математику, так и русский язык. На экзамене по русскому языку в НИУ ВШЭ я получил 88/100 баллов.
@@ -262,7 +265,7 @@
                 </p>
 
                 <p class="zgt">
-                    Отмечу, что Никита в первую очередь уделял внимание математике, а правила по русскому языку для него были скучны) Многих он не знал и не применял. Однако благодаря природным способностям Никита мог написать очень красивое сочинение, глубокое и интересное. На занятиях работал продуктивно, а вот домашней работе можно было уделить больше времени)
+                    Отмечу, что Никита в первую очередь уделял внимание математике, а правила по русскому языку для него были скучны). Многих он не знал и не применял. Однако благодаря природным способностям Никита мог написать очень красивое сочинение, глубокое и интересное. На занятиях работал продуктивно, а вот домашней работе можно было уделить больше времени)
                 </p>
 
                 <p class="zgt">
@@ -274,12 +277,18 @@
                 </p>
 
                 <h3>Отзыв 4</h3>
-				<p class="zgt">
-					<b>Павлов Илья, 12 гимназия tg: @ilya2005pan4 gmail-iliapavlov05@gmail.com</b>
-				</p>
-                <p class="zgt">
-                    <em>добавить фото</em>
-                </p>
+
+                <div class="ck"> 
+                    <img  style="width: 200px; height: 200px; border-radius: 50%;"
+                     src="images/photo/reviews/russian-language-tutor/Pavlov-Ilya-4.jpg" alt="Отзыв о репетиторе по русскому языку"> 
+			    </div>
+
+                <h4 align="center">
+                    Павлов Илья<br>
+                    12 гимназия<br>
+                    <a target="_blank" href="mailto:gmail-iliapavlov05@gmail.com">gmail-iliapavlov05@gmail.com</a><br>
+                    <a target="_blank" href="tg://resolve?domain=@ilya2005pan4">Telegram @ilya2005pan4</a>
+                </h4>
 
                 <p class="zgt">
                     Также я стал посещать занятия по русскому у Марины Михайловны (жена Игоря Викторовича) с 07.11.2022 года. Первое РТ я написал еще в октябре и набрал 57 баллов. К Марине Михайловне я пришел с очень слабой базой знаний, каждый урок проходил продуктивно, я узнавал для себя все больше и больше и, конечно, много практиковался. В конечном итоге я 14.05.2023  написал ЦЭ по русскому языку на 80 баллов и повысил отметку в аттестате с 8 баллов до 9.
