M-135 7) Ссылки на страницу

--- a/russian-language-tutor.html
+++ b/russian-language-tutor.html
@@ -94,7 +94,11 @@
 						alt="tech">
 					   <a href="https://t.me/+375295021002">+375(29)502-10-02</a>						
 				</div><br>
-
+				<div class="otz">
+					<span class="otz0">
+						<a href="russian-language-tutor-reviews.html">Отзывы о репетиторе</a>
+					</span>
+                </div>
 			</div>
 		</div>
 
@@ -308,6 +312,11 @@
 							</li>
 						</ul>
 				</ol>
+                <p align="center">
+                    <span class="otz0">
+                        <a href="russian-language-tutor-reviews.html">Отзывы о репетиторе c комментариями</a>
+                    </span>
+                </p>
 			</div>
 
 			<div class="clear"></div>
