--- a/site_map.html
+++ b/site_map.html
@@ -381,6 +381,7 @@
 					<h2 class="mainleft">Другое</h2>
 						<p class="zgt">
 							<a class="blink" href="russian-language-tutor.html">Репетитор по русскому и белорусскому языкам</a><br>
+                            <a class="blink" href="russian-language-tutor-reviews.html">Отзывы о репетиторе по русскому и белорусскому языкам</a><br>
 						</p>
 			</div>
 		<div class="clear"></div>
