M-135 8) Исправлены title, meta, h1, h2.

--- a/russian-language-tutor-reviews.html
+++ b/russian-language-tutor-reviews.html
@@ -2,12 +2,12 @@
 <html lang="ru">
 	<head>
 		<title>
-			Репетитор по русскому и белорусскому языкам для школьников и абитуриентов Игнатьева Марина Михайловна
+			Репетитор по русскому и белорусскому языкам для школьников и абитуриентов Игнатьева Марина Михайловна. Отзывы о репетиторе.
 		</title>
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Репетитор по русскому и белорусскому языкам для школьников и абитуриентов Игнатьева Марина Михайловна">
-		<meta name="keywords" content="Репетитор по русскому, репетитор по русскому языку, репетитор русский класс, репетитор по русскому 9 класс, репетитор по русскому языку 9, репетитор по русскому языку 9 класс, подготовка к цт по русскому, подготовка к цт по русскому языку, репетитор по цт русский язык, репетитор по русскому языку подготовка к цт, репетитор по русскому минск, репетитор по русскому языку в минске, подготовка к цэ русский, подготовка к цт по русскому языку, русский язык подготовка к централизованному тестированию, репетитор по белорусскому, репетитор по белорусскому языку, репетитор по белорусскому языку в минске">
+		<meta name="description" content="Репетитор по русскому и белорусскому языкам для школьников и абитуриентов Игнатьева Марина Михайловна. Отзывы о репетиторе.">
+		<meta name="keywords" content="Репетитор по русскому отзывы, репетитор по русскому языку отзывы, репетитор русский класс, репетитор по русскому 9 класс отзывы, репетитор по русскому языку 9 отзывы, репетитор по русскому языку 9 класс отзывы, подготовка к цт по русскому отзывы, подготовка к цт по русскому языку отзывы, репетитор по цт русский язык отзывы, репетитор по русскому языку подготовка к цт отзывы, репетитор по русскому минск отзывы, репетитор по русскому языку в минске отзывы, подготовка к цэ русский отзывы, подготовка к цт по русскому языку отзывы, русский язык подготовка к централизованному тестированию отзывы, репетитор по белорусскому отзывы, репетитор по белорусскому языку отзывы, репетитор по белорусскому языку в минске отзывы">
 		<meta name="yandex-verification" content="af875abcb7bc85a1">
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link href="style-new.css" rel="stylesheet" type="text/css">
@@ -31,11 +31,7 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>Репетитор по русскому языку, Минск</h1>
-			<span class="zs">  
-				Русский язык: подготовка к ЦТ и ЦЭ по русскому языку в Минске,<br>
-				репетитор по русскому 5 – 9 класс, 10 – 11 класс.
-			</span>
+			<h1>Репетитор по русскому и белорусскому языкам <br> Игнатьева Марина Михайловна. <br> Отзывы о репетиторе.</h1>
 			</div>
 			<div class="g3">
 				<img src="images/cat/russian-language/cat-russian-language-1.png" alt="tech">
@@ -153,7 +149,7 @@
 				<span class="h21">
 					Репетитор по русскому и белорусскому языкам для школьников и абитуриентов <br>
 					Игнатьева Марина Михайловна <br>
-                    Отзывы о репетиторе по русскому языку, Минск
+                    Отзывы о репетиторе
 				</span>
 			</h2>
 
