M-135 10) <b> to <em>. Стили для <a> и <h4>.

--- a/russian-language-tutor-reviews.html
+++ b/russian-language-tutor-reviews.html
@@ -13,6 +13,13 @@
 		<link href="style-new.css" rel="stylesheet" type="text/css">
 		<link REL="SHORTCUT ICON" HREF="favicon.ico">
 		<style>
+            a {
+                color: rgb(140, 140, 140);
+            }
+
+            h4 {
+                color: rgb(255, 90, 90);
+            }
 		</style>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114776658-1">
@@ -179,7 +186,7 @@
 
 
                 <p class="zgt">
-                    <b>Комментарий Игнатьевой Марины Михайловны, репетитора по русскому и белорусскому языкам в Минске:</b>
+                    <em>Комментарий Игнатьевой Марины Михайловны, репетитора по русскому и белорусскому языкам в Минске:</em>
                 </p>
 
                 <p class="zgt">
@@ -227,7 +234,7 @@
 			    </div>
 
                 <p class="zgt">
-                    <b>Комментарий репетитора по русскому языку в Минске:</b>
+                    <em>Комментарий репетитора по русскому языку в Минске:</em>
                 </p>
 
                 <p class="zgt">
@@ -251,7 +258,7 @@
                 </p>
 
                 <p class="zgt">
-                    <b>Комментарий репетитора по русскому языку, Минск:</b>
+                    <em>Комментарий репетитора по русскому языку, Минск:</em>
                 </p>
 
                 <p class="zgt">
@@ -283,7 +290,7 @@
                 </p>
 
                 <p class="zgt">
-                    <b>Комментарий репетитора по русскому языку, Минск:</b>
+                    <em>Комментарий репетитора по русскому языку, Минск:</em>
                 </p>
 
                 <p class="zgt">
