M-135 12) Убрал точки из отзыва и пару переносов строк

--- a/russian-language-tutor-reviews.html
+++ b/russian-language-tutor-reviews.html
@@ -38,7 +38,7 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>Репетитор по русскому и белорусскому языкам <br> Игнатьева Марина Михайловна. <br> Отзывы о репетиторе.</h1>
+			<h1>Репетитор по русскому и белорусскому языкам <br> Игнатьева Марина Михайловна <br> Отзывы о репетиторе</h1>
 			</div>
 			<div class="g3">
 				<img src="images/cat/russian-language/cat-russian-language-1.png" alt="tech">
@@ -154,7 +154,8 @@
 
 			<h2 class="main"> 
 				<span class="h21">
-					Репетитор по русскому и белорусскому языкам для школьников и абитуриентов <br>
+					Репетитор по русскому и белорусскому языкам <br>
+                     для школьников и абитуриентов <br>
 					Игнатьева Марина Михайловна <br>
                     Отзывы о репетиторе
 				</span>
